--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   },
   "homepage": "https://github.com/wikibook/nodejs#readme",
   "dependencies": {
+    "body-parser": "1.20.0",
+    "compression": "1.7.4",
     "express": "4.18.1",
+    "helmet": "6.0.0",
     "sanitize-html": "^1.18.2",
     "url-search-params": "1.1.0"
   }
